--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -48,16 +48,30 @@
         android:text="Register"
         app:layout_constraintEnd_toEndOf="@id/btn_login"
         app:layout_constraintTop_toBottomOf="@id/btn_login"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
         />
+    <Button android:id="@+id/btn_forgotPassword"
+        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/forgot_password"
+        android:gravity="center"
+        android:textSize="16sp"
+       app:layout_constraintTop_toBottomOf="@+id/btn_register"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_centerHorizontal="true"/>
     <Button
         android:id="@+id/btn_resend_verification"
         style="@style/Widget.MaterialComponents.Button.OutlinedButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Resend verification"
-        app:layout_constraintEnd_toEndOf="@id/btn_register"
-        app:layout_constraintTop_toBottomOf="@id/btn_register"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_forgotPassword"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="20dp"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
