Create project structure and setup jetpack navigation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="md_theme_primary">#005096</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#0075D6</color>
+    <color name="md_theme_onPrimaryContainer">#FFFFFF</color>
+    <color name="md_theme_secondary">#415F8A</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#BCD5FF</color>
+    <color name="md_theme_onSecondaryContainer">#1F4069</color>
+    <color name="md_theme_tertiary">#7C259B</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#A54FC3</color>
+    <color name="md_theme_onTertiaryContainer">#FFFFFF</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#410002</color>
+    <color name="md_theme_background">#F9F9FF</color>
+    <color name="md_theme_onBackground">#181C22</color>
+    <color name="md_theme_surface">#F9F9FF</color>
+    <color name="md_theme_onSurface">#181C22</color>
+    <color name="md_theme_surfaceVariant">#DCE3F2</color>
+    <color name="md_theme_onSurfaceVariant">#404753</color>
+    <color name="md_theme_outline">#707785</color>
+    <color name="md_theme_outlineVariant">#C0C7D6</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#2D3138</color>
+    <color name="md_theme_inverseOnSurface">#EEF0FA</color>
+    <color name="md_theme_inversePrimary">#A5C8FF</color>
+    <color name="md_theme_primaryFixed">#D4E3FF</color>
+    <color name="md_theme_onPrimaryFixed">#001C3A</color>
+    <color name="md_theme_primaryFixedDim">#A5C8FF</color>
+    <color name="md_theme_onPrimaryFixedVariant">#004786</color>
+    <color name="md_theme_secondaryFixed">#D4E3FF</color>
+    <color name="md_theme_onSecondaryFixed">#001C3A</color>
+    <color name="md_theme_secondaryFixedDim">#AAC8F9</color>
+    <color name="md_theme_onSecondaryFixedVariant">#284871</color>
+    <color name="md_theme_tertiaryFixed">#FAD7FF</color>
+    <color name="md_theme_onTertiaryFixed">#330045</color>
+    <color name="md_theme_tertiaryFixedDim">#EEB0FF</color>
+    <color name="md_theme_onTertiaryFixedVariant">#711891</color>
+    <color name="md_theme_surfaceDim">#D7DAE3</color>
+    <color name="md_theme_surfaceBright">#F9F9FF</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F1F3FD</color>
+    <color name="md_theme_surfaceContainer">#EBEEF7</color>
+    <color name="md_theme_surfaceContainerHigh">#E5E8F1</color>
+    <color name="md_theme_surfaceContainerHighest">#E0E2EC</color>
+    <color name="md_theme_primary_mediumContrast">#00437F</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#0075D6</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#24446D</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#5876A2</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#6D118C</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#A54FC3</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#8C0009</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#DA342E</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_mediumContrast">#181C22</color>
+    <color name="md_theme_surface_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_onSurface_mediumContrast">#181C22</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#DCE3F2</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#3C434F</color>
+    <color name="md_theme_outline_mediumContrast">#585F6C</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#747B88</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#2D3138</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#EEF0FA</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#A5C8FF</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#0075D6</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#005CAB</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#5876A2</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#3F5D88</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#A54FC3</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#8A34A8</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#D7DAE3</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#F9F9FF</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F1F3FD</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#EBEEF7</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E5E8F1</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#E0E2EC</color>
+    <color name="md_theme_primary_highContrast">#002246</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#00437F</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#002246</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#24446D</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#3D0052</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#6D118C</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#4E0002</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#8C0009</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#F9F9FF</color>
+    <color name="md_theme_onBackground_highContrast">#181C22</color>
+    <color name="md_theme_surface_highContrast">#F9F9FF</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#DCE3F2</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#1D242F</color>
+    <color name="md_theme_outline_highContrast">#3C434F</color>
+    <color name="md_theme_outlineVariant_highContrast">#3C434F</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#2D3138</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#E4ECFF</color>
+    <color name="md_theme_primaryFixed_highContrast">#00437F</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#002D58</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#24446D</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#062D55</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#6D118C</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#4D0067</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#D7DAE3</color>
+    <color name="md_theme_surfaceBright_highContrast">#F9F9FF</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F1F3FD</color>
+    <color name="md_theme_surfaceContainer_highContrast">#EBEEF7</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#E5E8F1</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#E0E2EC</color>
+    <color name="colorMediTrust">#005096</color>
+    <color name="colorOnMediTrust">#FFFFFF</color>
+    <color name="colorMediTrustContainer">#0075D6</color>
+    <color name="colorOnMediTrustContainer">#FFFFFF</color>
+    <color name="colorMediTrust_mediumContrast">#00437F</color>
+    <color name="colorOnMediTrust_mediumContrast">#FFFFFF</color>
+    <color name="colorMediTrustContainer_mediumContrast">#0075D6</color>
+    <color name="colorOnMediTrustContainer_mediumContrast">#FFFFFF</color>
+    <color name="colorMediTrust_highContrast">#002246</color>
+    <color name="colorOnMediTrust_highContrast">#FFFFFF</color>
+    <color name="colorMediTrustContainer_highContrast">#00437F</color>
+    <color name="colorOnMediTrustContainer_highContrast">#FFFFFF</color>
 </resources>
