--- a/app/src/main/res/layout/fragment_welcome.xml
+++ b/app/src/main/res/layout/fragment_welcome.xml
@@ -1,23 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".onboarding.presentation.welcome.WelcomeFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/gl_welcomeMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8" />
+
     <TextView
+        android:id="@+id/tv_welcomeMessage"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Welcome OPTIONS" />/>
+        android:layout_height="0dp"
+        android:background="@color/colorMediTrust"
+        android:padding="@dimen/_20sdp"
+        android:text="@string/get_better_connected_to_healthcare"
+        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="@id/gl_welcomeMessage"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:layout_width="@dimen/_150sdp"
+        android:layout_height="@dimen/_150sdp"
+        android:layout_margin="@dimen/_20sdp"
+        android:src="@drawable/onboarding"
+        app:layout_constraintBottom_toBottomOf="@id/tv_welcomeMessage"
+        app:layout_constraintEnd_toEndOf="@id/tv_welcomeMessage"
+      />
 
     <Button
-        android:layout_gravity="bottom"
         android:id="@+id/btn_welcome_next"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Get started"
-        android:layout_margin="@dimen/_20sdp"
-        />
-</FrameLayout>
+        android:layout_gravity="bottom"
+        android:layout_marginStart="@dimen/_20sdp"
+        android:layout_marginEnd="@dimen/_20sdp"
+        android:text="@string/get_started"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_welcomeMessage"
+        app:layout_constraintVertical_bias="0.5" />
+</androidx.constraintlayout.widget.ConstraintLayout>
