--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -3,7 +3,7 @@
     <style name="Theme.App.Starting" parent="Theme.SplashScreen">
 
         <item name="windowSplashScreenBackground">#D8D7D7</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/avd_meditrust</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/avd_medi_trust</item>
         <item name="windowSplashScreenAnimationDuration">1000</item>
         <item name="postSplashScreenTheme">@style/AppTheme</item>
 
