--- a/app/src/main/res/layout/backup_item_top_rated.xml
+++ b/app/src/main/res/layout/backup_item_top_rated.xml
@@ -7,16 +7,16 @@
     android:layout_marginEnd="@dimen/_4sdp"
     android:layout_marginStart="@dimen/_8sdp"
     android:layout_marginTop="@dimen/_8sdp"
-    app:cardBackgroundColor="@color/md_theme_surfaceDim_highContrast"
+    app:cardBackgroundColor="@color/md_theme_onPrimary_mediumContrast"
     android:layout_marginBottom="@dimen/_24sdp">
     <!--      app:cardBackgroundColor="@color/md_theme_light_onPrimary"-->
     <!--  app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"-->
     <!--    app:cardBackgroundColor="@color/md_theme_light_surface"
     -->
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/md_theme_onPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
         <ImageView
             android:id="@+id/img_add_new"
@@ -29,7 +29,6 @@
             android:scaleType="centerCrop"
             />
         <Button
-            android:visibility="gone"
             android:id="@+id/btn_bookmark"
             style="@style/Widget.Material3.Button.IconButton.Filled"
             android:layout_width="0dp"
@@ -40,39 +39,20 @@
             app:iconTint="@color/colorMediTrust"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
- />
+            />
         <TextView
             android:id="@+id/tv_doctor_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Muhammad Azharul Islam "
+            android:text="Tomato "
             android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-            android:singleLine="true"
-            android:ellipsize="end"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/img_add_new"
-            app:layout_constraintEnd_toStartOf="@id/tv_doctorRating"
-            app:layout_goneMarginEnd="@dimen/_5sdp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="@dimen/_10sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:id="@+id/tv_doctorRating"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="4.8"
-            android:drawableStart="@drawable/ic_star_rate"
-            android:drawableTint="#FBBC04"
-            android:drawablePadding="@dimen/_5sdp"
-            android:gravity="center"
-            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/img_add_new"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="@dimen/_8sdp"
-            android:layout_marginEnd="@dimen/_10sdp"
+            android:textStyle="bold"
             />
 
         <TextView
@@ -80,8 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
-            android:text="Cardiology"
-            android:layout_marginStart="@dimen/_10sdp"
+            android:text="Crop"
+            android:layout_marginStart="@dimen/_16sdp"
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/amount_divider"
@@ -100,14 +80,14 @@
             android:id="@+id/stock_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="1250 patients"
+            tools:text="1250 units"
             android:layout_marginBottom="@dimen/_10sdp"
             android:textColor="@color/md_theme_primary_mediumContrast"
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
             app:layout_constraintTop_toBottomOf="@id/tv_doctorSpecialization"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginStart="@dimen/_16sdp"
             />
 
         <androidx.constraintlayout.widget.Group
@@ -128,15 +108,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="@id/amount_divider"
-            android:src="@drawable/ic_bookmark"
+            android:src="@drawable/ic_add"
             android:scaleType="centerCrop"
-            android:layout_width="@dimen/_24sdp"
-            android:layout_height="@dimen/_24sdp"
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_30sdp"
             android:background="@color/md_theme_primary_mediumContrast"
             app:tint="@android:color/white"
             app:contentPadding="@dimen/_5sdp"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSizeTL30BR10Percent"
             android:layout_marginTop="17dp"
+
             />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
