--- a/app/src/main/res/layout/fragment_find_book.xml
+++ b/app/src/main/res/layout/fragment_find_book.xml
@@ -88,6 +88,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
             android:clipToPadding="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:paddingBottom="@dimen/_112sdp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
