--- a/app/src/main/res/layout/fragment_specialization_doctors.xml
+++ b/app/src/main/res/layout/fragment_specialization_doctors.xml
@@ -14,7 +14,7 @@
             android:fitsSystemWindows="true">
 
             <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/contact_collapsing_toolbar"
+                android:id="@+id/doctor_collapsing_toolbar"
                 style="?attr/collapsingToolbarLayoutLargeStyle"
                 android:layout_width="match_parent"
                 android:layout_height="152dp"
@@ -25,7 +25,7 @@
                 app:statusBarScrim="@color/md_theme_onSurfaceVariant_mediumContrast"
                 app:expandedTitleMarginStart="72dp"
                 app:expandedTitleMarginBottom="28dp"
-                app:title="Seedling">
+                app:title="Specialization name">
 
                 <LinearLayout
                     android:background="@color/md_theme_primary_mediumContrast"
@@ -54,7 +54,7 @@
                         android:maxLines="2"
                         android:textAlignment="center"
                         android:textColor="@android:color/white"
-                        android:text="Seedling" />
+                        android:text="Specialization name" />
 
                     <TextView
                         android:id="@+id/tv_caption"
@@ -85,6 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:paddingTop="12dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
             android:clipToPadding="false"
