--- a/app/src/main/res/layout/list_item_booked_doctor.xml
+++ b/app/src/main/res/layout/list_item_booked_doctor.xml
@@ -1,70 +1,87 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/Widget.Material3.CardView.Filled"
-    android:layout_margin="@dimen/_4sdp"
-    app:cardBackgroundColor="@color/md_theme_surface_mediumContrast"
-    >
+    android:layout_marginEnd="@dimen/_5sdp"
+    android:layout_marginStart="@dimen/_5sdp"
+    android:layout_marginTop="@dimen/_5sdp"
+    app:cardBackgroundColor="@color/md_theme_surfaceDim_highContrast"
+    android:layout_marginBottom="@dimen/_5sdp">
     <!--      app:cardBackgroundColor="@color/md_theme_light_onPrimary"-->
     <!--  app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"-->
     <!--    app:cardBackgroundColor="@color/md_theme_light_surface"
     -->
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/md_theme_onPrimary"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <!-- android:paddingRight="@dimen/_24sdp"-->
-        <!--  android:paddingBottom="@dimen/_8sdp"-->
-        <!-- Your image view here -->
-        <com.google.android.material.imageview.ShapeableImageView
+        android:layout_height="wrap_content">
+
+        <ImageView
             android:id="@+id/img_add_new"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/ic_profile_avatar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSizeTL30BR10Percent"
-            app:layout_constraintBottom_toTopOf="@+id/gd_productImage"
-            android:layout_marginTop="0dp"
-            android:paddingTop="0dp"
-            android:background="#F7F9F8"
-            />
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gd_productImage"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent=".6"
+            android:adjustViewBounds="true"
+            android:src="@drawable/tomato_white"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:scaleType="centerCrop"
             />
-        <!--android:paddingTop="@dimen/_8sdp"-->
-        <!--         android:paddingStart="@dimen/_16sdp"-->
-        <TextView
-            android:id="@+id/tv_product_name"
+        <Button
+            android:visibility="gone"
+            android:id="@+id/btn_bookmark"
+            style="@style/Widget.Material3.Button.IconButton.Filled"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Tomato"
-            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/gd_productImage"
+            android:layout_margin="@dimen/_10sdp"
+            android:backgroundTint="@color/md_theme_surfaceDim_highContrast"
+            app:icon="@drawable/ic_bookmark_button"
+            app:iconTint="@color/colorMediTrust"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            android:id="@+id/tv_doctor_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Muhammad Azharul Islam "
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            android:singleLine="true"
+            android:ellipsize="end"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_add_new"
+            app:layout_constraintEnd_toStartOf="@id/tv_doctorRating"
+            app:layout_goneMarginEnd="@dimen/_5sdp"
             android:layout_marginEnd="16dp"
-            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginTop="@dimen/_8sdp"
             android:textStyle="bold"
             />
-
+        <TextView
+            android:id="@+id/tv_doctorRating"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="4.8"
+            android:drawableStart="@drawable/ic_star_rate"
+            android:drawableTint="#FBBC04"
+            android:drawablePadding="@dimen/_5sdp"
+            android:gravity="center"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_add_new"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            />
 
         <TextView
-            android:id="@+id/tv_category_name"
+            android:id="@+id/tv_doctorSpecialization"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="crop"
-            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:text="Cardiology"
+            android:layout_marginStart="@dimen/_10sdp"
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/amount_divider"
@@ -77,39 +94,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_doctor_name"
             />
         <TextView
-
             android:id="@+id/stock_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="1200 "
+            tools:text="1250 patients"
+            android:layout_marginBottom="@dimen/_10sdp"
             android:textColor="@color/md_theme_primary_mediumContrast"
             android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
-            app:layout_constraintTop_toBottomOf="@id/tv_category_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_doctorSpecialization"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="@dimen/_8sdp"
-            android:layout_marginStart="@dimen/_16sdp"
+            android:layout_marginStart="@dimen/_10sdp"
             />
-        <com.google.android.material.imageview.ShapeableImageView
-            android:visibility="invisible"
-            android:id="@+id/img_add_item"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@id/amount_divider"
-            android:src="@drawable/ic_add"
-            android:scaleType="centerCrop"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:background="@color/md_theme_primary_mediumContrast"
-            app:tint="@android:color/white"
-            app:contentPadding="@dimen/_5sdp"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSizeTL30BR10Percent"
-            android:layout_marginTop="8dp"
 
-            />
+        <androidx.constraintlayout.widget.Group
+            android:id="@+id/group_product_item"
+            style="@style/Widget.Material3.CardView.Filled"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            app:constraint_referenced_ids="tv_doctor_name,tv_doctorSpecialization,stock_label"
+            app:layout_constraintBottom_toBottomOf="@+id/stock_label"
+
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
