--- a/app/src/main/res/layout/list_item_find_book_doctor.xml
+++ b/app/src/main/res/layout/list_item_find_book_doctor.xml
@@ -1,114 +1,146 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    style="@style/Widget.Material3.CardView.Filled"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Widget.Material3.CardView.Filled"
     android:layout_margin="@dimen/_4sdp"
-    app:cardBackgroundColor="@color/md_theme_surface_mediumContrast"
-    >
-    <!--      app:cardBackgroundColor="@color/md_theme_light_onPrimary"-->
-    <!--  app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"-->
-    <!--    app:cardBackgroundColor="@color/md_theme_light_surface"
-    -->
+    app:cardBackgroundColor="@color/md_theme_surface_mediumContrast">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-        <!-- android:paddingRight="@dimen/_24sdp"-->
-        <!--  android:paddingBottom="@dimen/_8sdp"-->
-        <!-- Your image view here -->
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/img_add_new"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:src="@drawable/ic_profile_avatar"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSizeTL30BR10Percent"
-            app:layout_constraintBottom_toTopOf="@+id/gd_productImage"
-            android:layout_marginTop="0dp"
-            android:paddingTop="0dp"
-            android:background="#F7F9F8"
-            />
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/gd_productImage"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent=".6"
-            />
-        <!--android:paddingTop="@dimen/_8sdp"-->
-        <!--         android:paddingStart="@dimen/_16sdp"-->
-        <TextView
-            android:id="@+id/tv_product_name"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Tomato"
-            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/gd_productImage"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:layout_marginTop="@dimen/_8sdp"
-            android:textStyle="bold"
-            />
+        android:layout_height="wrap_content">
 
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/img_doctor"
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:src="@drawable/ic_profile_avatar"
+            app:layout_constraintBottom_toBottomOf="@+id/divider_amount"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/guideLine_name"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="VectorDrawableCompat" />
+
+        <TextView
+            android:id="@+id/tv_doctor_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_15sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="Muhammad Azharul Islam"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            app:layout_constraintEnd_toStartOf="@id/img_bookmark_doctor"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/img_bookmark_doctor"
+            android:src="@drawable/ic_bookmark"
+            android:scaleType="centerCrop"
+            android:layout_width="@dimen/_24sdp"
+            android:layout_height="@dimen/_24sdp"
+            android:background="@color/md_theme_surfaceContainer"
+            app:tint="@color/colorMediTrust"
+            app:contentPadding="@dimen/_5sdp"
+            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSizeTL30BR10Percent"
+            android:layout_marginTop="@dimen/_20sdp"
+            app:layout_constraintEnd_toStartOf="@id/guideLine_name"
+            app:layout_constraintStart_toEndOf="@+id/tv_doctor_name"
+            app:layout_constraintTop_toTopOf="parent"
+            />
+        <TextView
+            android:id="@+id/tv_doctorLocation"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Phulpur/Mymensingh"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            app:layout_constraintStart_toStartOf="@id/tv_doctor_name"
+            app:layout_constraintTop_toBottomOf="@id/tv_doctor_name" />
 
         <TextView
             android:id="@+id/tv_category_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_16sdp"
             android:layout_marginTop="4dp"
-            android:text="crop"
-            android:layout_marginStart="@dimen/_16sdp"
-            android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
+            android:text="Therapist. Experiance 5 years"
+            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/amount_divider"
-            />
+            app:layout_constraintTop_toBottomOf="@id/tv_doctorLocation" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideLine_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent=".7" />
+
         <com.google.android.material.divider.MaterialDivider
-
-            android:id="@+id/amount_divider"
+            android:id="@+id/divider_amount"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="@dimen/_10sdp"
+            app:dividerColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_product_name"
-            />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_doctor" />
+
         <TextView
-
-            android:id="@+id/stock_label"
+            android:id="@+id/tv_locationLabel"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="1200 units"
-            android:textColor="@color/md_theme_primary_mediumContrast"
-            android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
-            app:layout_constraintTop_toBottomOf="@id/tv_category_name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginBottom="@dimen/_8sdp"
             android:layout_marginStart="@dimen/_16sdp"
-            />
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/img_add_item"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:drawableStart="@drawable/ic_circle"
+            android:drawablePadding="@dimen/_5sdp"
+            android:drawableTint="@color/colorMediTrust"
+            android:text="Location details"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+            android:textColor="@color/md_theme_primary_mediumContrast"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="@id/amount_divider"
-            android:src="@drawable/ic_add"
-            android:scaleType="centerCrop"
-            android:layout_width="@dimen/_30sdp"
-            android:layout_height="@dimen/_30sdp"
-            android:background="@color/md_theme_primary_mediumContrast"
-            app:tint="@android:color/white"
-            app:contentPadding="@dimen/_5sdp"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSizeTL30BR10Percent"
-            android:layout_marginTop="8dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/divider_amount" />
 
-            />
+        <TextView
+            android:id="@+id/tv_doctorRating"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
+            android:layout_marginBottom="@dimen/_10sdp"
+            android:drawableStart="@drawable/ic_star_rate"
+            android:drawableTint="#FBBC04"
+            android:drawablePadding="@dimen/_5sdp"
+            android:gravity="center"
+            android:text="4.5 (120 reviews)"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/divider_amount"
+            app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/btn_bookmark"
+            style="@style/Widget.Material3.Button.IconButton.Filled"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:backgroundTint="@android:color/transparent"
+            android:visibility="invisible"
+            app:icon="@drawable/ic_bookmark_button"
+            app:iconTint="@color/colorMediTrust"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tv_doctorRating"
+            app:layout_constraintTop_toBottomOf="@id/divider_amount" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
