--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,10 @@
         <item name="cornerSizeTopLeft">30%</item>
         <item name="cornerSizeBottomRight">10%</item>
     </style>
+    <style name="ShapeAppearanceOverlay.App.CornerSizeBL30BR30Percent" parent="AppTheme">
+        <item name="cornerSizeBottomLeft">16%</item>
+        <item name="cornerSizeBottomRight">16%</item>
+    </style>
     <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <item name="colorControlNormal">@android:color/white</item>
