--- a/app/src/main/res/drawable/ic_mt_svg.xml
+++ b/app/src/main/res/drawable/ic_mt_svg.xml
@@ -5,8 +5,14 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
 
+    <!-- Drawing "M" -->
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+        android:pathData="M3,20V4h2l3,5l3-5h2v16h-2V9l-3,5l-3-5v11H3Z" />
+
+    <!-- Drawing "T" -->
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M17,4h-6v2h2v14h2V6h2V4Z" />
 
 </vector>
