--- a/app/src/main/res/drawable/ic_verified_profile.xml
+++ b/app/src/main/res/drawable/ic_verified_profile.xml
@@ -7,6 +7,6 @@
 
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M19,13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z" />
+        android:pathData="M12,2L4,5v6.09c0,5.05 3.41,9.76 8,10.91c4.59,-1.15 8,-5.86 8,-10.91V5L12,2zM10.94,15.54L7.4,12l1.41,-1.41l2.12,2.12l4.24,-4.24l1.41,1.41L10.94,15.54z" />
 
 </vector>
