Improved modularity and maintainability of layout configuration.

--- a/app/src/main/res/layout/about_medi_trust_section.xml
+++ b/app/src/main/res/layout/about_medi_trust_section.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_constraintTop_toBottomOf="@id/include_languageSetup"
-    >
+    app:layout_constraintTop_toBottomOf="@id/include_languageSetup">
 
     <TextView
         android:id="@+id/tv_aboutMediTrust"
